# MagiColour

./: .gitignore  .pylintrc  README.md  config.yml  main.py  main.pyw  pyproject.toml  qml.py  qml.qrc  rc_style.py  style.qrc
App/: CubeEffect.frag  CubeEffect.frag.qsb  HueEffect.frag  HueEffect.frag.qsb  Main.qml
MagiColour/: ColourCube.qml
resources/qml/MagiColour/: ColourCube.qml  CubeEffect.frag  CubeEffect.frag.qsb  HueEffect.frag  qmldir
src/magicolour/: main.pyw  picker.pyw
